--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,6 +6,7 @@
   <title>[ADMIN]ちょっときいて呉高専</title>
   <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
+  <%= csrf_meta_tags %>
 </head>
 
 <body class="fixed-nav bg-dark">
